third_party/move/move-compiler-v2/tests/ability-checker/invalid_struct_def.exp

Diagnostics:
error: Invalid instantiation
  ┌─ tests/ability-checker/invalid_struct_def.move:4:15
  │
4 │     struct Bar { x: Foo<u8> }
  │                  ^

error: Invalid instantiation
  ┌─ tests/ability-checker/invalid_struct_def.move:6:18
  │
6 │     struct Baz<T> { x: Foo<T> }
  │                     ^

error: must have drop ability
   ┌─ tests/ability-checker/invalid_struct_def.move:28:3
   │
28 │         y: Impotent,
   │         ^

error: must have drop ability
   ┌─ tests/ability-checker/invalid_struct_def.move:19:3
   │
19 │         x: Impotent
   │         ^

error: must have store ability
   ┌─ tests/ability-checker/invalid_struct_def.move:15:3
   │
15 │         x: HasKey
   │         ^

error: must have drop ability
   ┌─ tests/ability-checker/invalid_struct_def.move:33:3
   │
33 │         x: ConditionalDrop<Impotent>
   │         ^
